--- a/hiking_trails.html
+++ b/hiking_trails.html
@@ -31,9 +31,10 @@
             <h3>Маршрути</h3>
         </section>
         <img src="images/homjak.png" alt="Гора Хомяк">
-     <p><pre>Дистанція та складність: 6 км, легкий
-Час проходження: 2,5 годин (в одну сторону), одноденний
-Локація: Ґорґанські гори</pre> </p>
+     <p><pre>
+<strong>Дистанція та складність:</strong> 6 км, легкий
+<strong>Час проходження:</strong> 2,5 годин (в одну сторону), одноденний
+<strong>Локація:</strong> Ґорґанські гори</pre> </p>
 <details>
             <summary>Більше</summary>
             <p>
