--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Travel</title>
-    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
+		<img src="images/logo2.png" alt="Логотип">
 		<h1>Мандруй</h1>
 		<h2>Туристичний путівник Карпатами</h2>
 	</header>
@@ -16,6 +18,8 @@
 		<a href="index.html">Головна</a>
 		<a href="hiking_trails.html">Туристичні маршрути</a>
 		<a href="blog.html">Блог</a>
+        <input type="search" placeholder="Пошук">
+        <button>Пошук</button>
 	</nav>
 	<main>
 		<article>
@@ -119,11 +123,19 @@
     </footer>
     <article>
         <hr>
-        <figure>
+     <figure>
+            <a href="https://www.facebook.com/profile.php?id=100002282821034">
         <img src="images/facebook.png" alt="facebook">
+        </a>
+        <a href="https://www.instagram.com/k_o_s_y_i_v_n_a/?hl=uk">
         <img src="images/instagram.png" alt="instagram">
+        </a>
+        <a href="https://twitter.com/?lang=uk">
         <img src="images/twitter.png" alt="twitter">
+        </a>
+        <a href="https://web.telegram.org/#/login">
         <img src="images/telegram.png" alt="telegram">
+        </a>
         </figure>
          </article>
 </body>
