--- a/hiking_trails.html
+++ b/hiking_trails.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Travel</title>
-     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 	<header>
+		<img src="images/logo2.png" alt="Логотип">
 		<h1>Мандруй</h1>
 		<h2>Туристичний путівник Карпатами</h2>
 	</header>
@@ -16,6 +19,8 @@
 		<a href="index.html">Головна</a>
 		<a href="hiking_trails.html">Туристичні маршрути</a>
 		<a href="blog.html">Блог</a>
+        <input type="search" placeholder="Пошук">
+        <button>Пошук</button>
 	</nav>
 	<main>
 		<article>
@@ -198,7 +203,7 @@
 У межах Надвірнянського родовища, до якого входять довколишні території, таких свердловин — більше трьохсот.
 
 Чи безпечно йти цим маршрутом, якщо тут отак відкрито проходить видобуток нафти? Так, безпечно. Правила поводження з вогнем біля таких місць, гадаємо, знайомі кожній свідомій людині. Не паліть поруч нафти — не буде нікому лиха. Чи потрібні дозволи, щоб пройти цією дорогою? Ні, не потрібні. Турист ви, грибник чи просто заблукали — почувайтеся вільно, за вами не спустять собак, і не кричатимуть: “Стій! Стрілятиму!”.
-<img src="images/syniacka2.jpg" alt="Краєвид">
+<img src="images/syniachka2.jpg" alt="Краєвид">
 Ще цікаво глянути на місцеву геологічну пам’ятку — Білий Камінь, або як його частіше називають Пірс-Дору. Ці височенні скелі ямненського пісковика досягають ледь не 30 метрів, поруч завжди багато відпочиваючих та скелелазів — одним тут добре йде шашличок, іншим — тренування. Хоча така доступність скель до цивілізації дається в знаки: якби “шашличники” за собою прибирали, а невідомі художники не залишали свої автографи, на Білий Камінь хотілось би повернутись знову.
 
 От чим тішить Синячка, так це кількістю ягід, які тут можна назбирати влітку: всі схили у малині та чорницях. Якщо ви любитель попоїсти натур-продукт, розраховуйте час: іноді він летить непомітно, коли хочеш зірвати одну стиглу ягідку, а за нею руки неодмінно тягнуться по ще одну і так, поки всі кущі не обідрете. Не бажаєте запізнитись на останню маршрутку додому? Не затримуйтесь на ягідних полях.
@@ -210,7 +215,7 @@
 Вершина Синячки виглядає як типова ґорґанська: скрізь каміння, подекуди цілі глиби. порослі лишайником. Проте незначна висота (1 400 метрів н.р.м. — це “незначна висота”, повірте) зумовлює наявність дерев та чагарників: не сказати, що тут можна сховатись у затінку, проте “голою” маківка Синячки точно не виглядає.
 
 Спуститись можна у Яремче і там завершити день біля водоспаду Пробій чи прогулянкою до більш тихого водограю Дівочі сльози.
-<img src="images/syniacka2.jpg" alt="Краєвид">
+<img src="images/syniachka2.jpg" alt="Краєвид">
 Зверніть увагу: цей маршрут добре підійде для тривалого денного походу. І на слові тривалий варто зробити акцент. На перший погляд, маршрут легкий і серйозних перепадів висоти немає, проте подолати за день 21 км комусь може бути понад норми. Вирішили вкластись у добу? Чим раніше стартуєте, тим краще. І справа не тільки у перерозподілі власних сил, але і у зворотньому транспорті. Щоб пройти Синячку і спуститись у Яремче вам знадобиться добрих 8 годин, якщо йти середнім темпом і не зупинятись біля кожного камінчика. Аби хоч якось виїхати з Яремче до того ж Івано-Франківська після гір маєте бути на трасі не пізніше 19:30.
 Маршрут на гору Синячка
 
@@ -238,17 +243,17 @@
 У Карпатах чимало схожих топонімів, тому перш ніж рушати кудись, упевніться, що ви прямуєте у правильному напрямку. Так, прикладом, тільки Гуків (водоспадів) у Карпатах штук п’ять, і гір-Явірників теж парочка знайдеться. Один точно є на Закарпатті, а наразі мова піде про Яворову гору, що височіє біля Яремче у Ґорґанах.
 
 Попереджаємо одразу: йти можна прицільно на Явірник, взяти вершину висотою 1 467 метрів, і спуститись вниз, повністю собою задоволеним. А можна трохи познущатись над організмом і після вершини пройти всім хребтом Явірник, подивитись на залишки оборонних конструкцій, що залишились з часів війни.
-<img src="images/yavirnuk4.jpg" alt="Краєвид">
+<img src="images/yavirnyk4.jpg" alt="Краєвид">
 Явірник
 Явірник, фото Андрій Плясун
 Ґорґани — гори специфічні і якщо на тому ж Свидовці словосполука “хребтова стежка” гарантуватиме вам добре втоптану дорогу, що справді пролягає маківками гір без суттєвих перепадів висоти, то на Явірнику все не так. Хребет є. А стежки нема. Є розсип каміння всіх можливих різновидів: від каміньчика, що вміщається на долоньці, до величезної брили, на якій без проблем вмостишся ти сам. Розсипи хаотично нагромаджені на всьому хребті, раз-через-раз каміння ходить попід ногами і спонукає балансувати. Довколишні краєвиди тішать око, проте, без відповідного взуття та великого бажання майже 7 км йти камінними тропами, на сам хребет краще не потикатись.
 
 Виходити зручно з Ямної — присілка Яремче. Там і маркування є, і кілька варіантів для початку маршруту. Скажімо, можна йти через полонину Вовчу (так коротше і пологіше), а можна і через гору Круглоявірник (доведеться кілька разів видершись на схил, “пірнути” в ліс і набирати висоту наново). Обидва варіанти для старту перед вершиною зійдуться на полонині Явірник.
-<img src="images/yavirnuk2.jpg" alt="Краєвид">
+<img src="images/yavirnyk2.jpg" alt="Краєвид">
 Явірник
 Явірник, фото Андрій Плясун
 На полонині є декілька джерел питної води, стоїть гуцульська колиба: влітку у місцевого пастуха можна придбати полонинського сиру та молока, дізнатись щось про гуцульський побут, як пощастить — побачити процес варки сиру. За потреби, неподалік є місця для наметів та видові точки на гору Хом’як (буде перед вами як на долоні і служитиме прекрасним орієнтиром у разі, якщо загубили маркування на стежці). Звідси ж видно і Чорногору — в обрисах далеких гір легко впізнати Говерлу. Чорногірський хребет за нею робить стрімкий вигин, а за глибокою сідловиною так само стрімко починається підйом на останній двотисячник Чорногори — гору Петрос.
-<img src="images/yavirnuk3.jpg" alt="Краєвид">
+<img src="images/yavirnyk3.jpg" alt="Краєвид">
 За полониною стежка веде у ліс і тут головне не пропустити петлю направо. Досить часто туристи, що таборують у ліску, направляють інші групи: “Вам на Явірник?” — “Так!” — “Так це в іншу сторону!”. Тож, слідкуйте за GPS-приладом або ж тримайте мапу й компас в полі зору.
 
 Явірник
@@ -277,7 +282,7 @@
 48.420177, 24.472314 — джерело на спуску з хребта Явірник
 
 Маршрут на г. Явірник-Ґорґан та хребет Явірник
-<img src="images/yavirnuk1.jpg" alt="Краєвид">
+<img src="images/yavirnyk1.jpg" alt="Краєвид">
 Як дістатись:
 Виходити на маршрут можна як з Яремче, так і з Ямної, що за нею. Транспорту у той бік ходить чимало — зручніше добиратись автобусами, бо вони курсують щодвадцять хвилин, а то й частіше. Хоча їхати можна і пасажирським, і потягом приміського сполучення.
 
@@ -335,10 +340,18 @@
     <article>
         <hr>
         <figure>
+            <a href="https://www.facebook.com/profile.php?id=100002282821034">
         <img src="images/facebook.png" alt="facebook">
+        </a>
+        <a href="https://www.instagram.com/k_o_s_y_i_v_n_a/?hl=uk">
         <img src="images/instagram.png" alt="instagram">
+        </a>
+        <a href="https://twitter.com/?lang=uk">
         <img src="images/twitter.png" alt="twitter">
+        </a>
+        <a href="https://web.telegram.org/#/login">
         <img src="images/telegram.png" alt="telegram">
+        </a>
         </figure>
          </article>
 </body>
