--- a/index.html
+++ b/index.html
@@ -1,116 +1,119 @@
 <!DOCTYPE html>
 <html lang="uk">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Travel</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-	<header>
-		<img src="images/logo2.png" alt="Логотип">
-		<h1>Мандруй</h1>
-		<h2>Туристичний путівник Карпатами</h2>
-	</header>
-	<nav>
-		<a href="index.html">Головна</a>
-		<a href="hiking_trails.html">Туристичні маршрути</a>
-		<a href="blog.html">Блог</a>
-        <input type="search" placeholder="Пошук">
-        <button>Пошук</button>
-	</nav>
-	<main>
-		<article class="change">
-		 <img src="images/img1.jpeg" alt="mountains1" width="980" height="526">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Travel</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <img src="images/logo2.png" alt="Логотип">
+            <h1>Мандруй</h1>
+            <h2>Туристичний путівник Карпатами</h2>
+        </header>
+        <nav>
+            <a href="index.html">Головна</a>
+            <a href="hiking_trails.html">Туристичні маршрути</a>
+            <a href="blog.html">Блог</a>
+            <input type="search" placeholder="Пошук">
+            <button>Пошук</button>
+        </nav>
+        <main>
+            <article class="change">
+                <img src="images/img1.jpeg" alt="mountains1" width="980" height="526">
          <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
          <img src="images/img3.jpeg" alt="mountains3" width="980" height="526">
          <img src="images/img4.jpeg" alt="mountains4" width="980" height="526">
          <img src="images/img5.jpeg" alt="mountains5" width="980" height="526">
          <img src="images/img6.jpeg" alt="mountains6" width="980" height="526"> -->
-     </article>
-     <article>
-        <section>
-            <h3>Про нас</h3>
-        </section>
-        <p>
-         Куди поїхати? Яким маршрутом піти? Що з собою взяти? На цьому сайті ви швидко знайдете відповіді на всі ці питання. Де б ви не мандрували, ми підкажемо, як найкраще провести час та чудово провести вихідні в Карпатах!
-<br><strong> Найкращі туристичні маршрути в Україні. Відпочинок для активних</strong>
+            </article>
+            <article>
+                <section>
+                    <h3>Про нас</h3>
+                </section>
+                <p>
+                    Куди поїхати? Яким маршрутом піти? Що з собою взяти? На цьому сайті ви швидко знайдете відповіді на всі ці питання. Де б ви не мандрували, ми підкажемо, як найкраще провести час та чудово провести вихідні в Карпатах!
 <br>
-Туристичні маршрути Карпат – це гарний спосіб провести відпустку чи вихідні у різні пори року. Такий активний відпочинок прийдеться до смаку тим, хто не любить «вилежувати боки» на пляжі чи дивані. Невимовно гарні краєвиди, дзвінкі гірські потоки та п’янке повітря створять особливу атмосферу відпочинку та дозволять хоча би на деякий час «забути» про турботи та тисняву великого міста.
-<br><strong> Маршрути Карпатами – таємниці гір кличуть у мандрівку невгамовних</strong>
+                    <strong>Найкращі туристичні маршрути в Україні. Відпочинок для активних</strong>
+                    <br>
+                    Туристичні маршрути Карпат – це гарний спосіб провести відпустку чи вихідні у різні пори року. Такий активний відпочинок прийдеться до смаку тим, хто не любить «вилежувати боки» на пляжі чи дивані. Невимовно гарні краєвиди, дзвінкі гірські потоки та п’янке повітря створять особливу атмосферу відпочинку та дозволять хоча би на деякий час «забути» про турботи та тисняву великого міста.
 <br>
-Ми пропонуємо найкращі мандівки, маршрути яких можна обрати у відповідності до пори року, рівня підготовки туристів та кількості днів.  Також ви можете звернутися до досвідчених інструкторів, які зроблять турпохід захоплюючим, яскравим та незабутнім.
+                    <strong>Маршрути Карпатами – таємниці гір кличуть у мандрівку невгамовних</strong>
+                    <br>
+                    Ми пропонуємо найкращі мандівки, маршрути яких можна обрати у відповідності до пори року, рівня підготовки туристів та кількості днів.  Також ви можете звернутися до досвідчених інструкторів, які зроблять турпохід захоплюючим, яскравим та незабутнім.
 <br>
-Найкращі туристичні маршрути у Карпати – це не тільки відвідини знаних та відомих в Україні місцин карпатських гір. Бо є багато цікавих місць, які чомусь, оминаються туристами. А у наші тури вони є включені, що дає можливість побачити зовсім інші невідомі широкому загалу, «не затерті» гори.
-<br><strong>Піші маршрути Карпатами, або трекінг по українськи</strong>
+                    Найкращі туристичні маршрути у Карпати – це не тільки відвідини знаних та відомих в Україні місцин карпатських гір. Бо є багато цікавих місць, які чомусь, оминаються туристами. А у наші тури вони є включені, що дає можливість побачити зовсім інші невідомі широкому загалу, «не затерті» гори.
 <br>
-Для того аби долучитися до особливого стану єднання з природою, найкраще обирати для відпочинку піші маршрути Карпатами. А мандрувати по горах з нашою компанією – правильний та розумний вибір.
-        </p>
-    </article>
-    <aside>
-        <a href="https://www.karpaty.info/ua/info/useful/telephone/">
-       <h4> Контактні телефони Гірських пошуково-рятувальних підрозділів</h4>
-       <img src="images/save.jpg" alt="контакти_рятувальників">
-        </a>
-        <a href="https://www.robinzon-ua.com.ua/ukr/prokat-turistichnogo-sporjadzhennja/">
-        <h4> Прокат туристичного спорядження</h4>
-         <img src="images/прокат.jpg" alt="прокат"></a>
-        <a href="https://calendar.karpaty.ua/uk/events/kazkovyj-marmaros">
-        <h4>Найближча подія</h4>
-        <img src="images/гід.png" alt="події">
-        </a>
-    </aside>
-    </main>
-    <footer>
-<article><h4>Контактна інформація</h4></article>
-    <section>
-        <!-- <img src="images/mail.png" alt="електронна пошта"> -->
-        <p>&#x2709; oksankak16@gmail.com</p>
-        <!-- <img src="images/mobile.png" alt="контактний номер"> -->
-        <p>&#x2706; 0937606382</p>
-        <p>0671030220</p>
-    </section>
-    <h4>Напишіть нам:</h4>
-        <form action="https://formspree.io/oksankak16@gmail.com" method="POST">
-        <label>
-            <input type="text" placeholder="Ваше ім'я" name="your_name">
-        </label>
-        <br>
-          <br>
-        <label>
-            <input type="email" placeholder="Електронна адреса" name="your_address" >
-        </label>
-        <br>
-          <br>
-        <label>
-            <textarea name="your comments" cols="30" rows="5" placeholder="Ваше повідомлення"></textarea>
-        </label>
-        <label>
-            <br>
-              <br>
-    <input type="submit" value="Відправити">
-    </label>
-        </form>
-    </footer>
-    <article>
-        <hr>
-        <figure>
-            <a href="https://www.facebook.com/profile.php?id=100002282821034">
-        <img src="images/facebook.png" alt="facebook">
-        </a>
-        <a href="https://www.instagram.com/k_o_s_y_i_v_n_a/?hl=uk">
-        <img src="images/instagram.png" alt="instagram">
-        </a>
-        <a href="https://twitter.com/?lang=uk">
-        <img src="images/twitter.png" alt="twitter">
-        </a>
-        <a href="https://web.telegram.org/#/login">
-        <img src="images/telegram.png" alt="telegram">
-        </a>
-        </figure>
-         </article>
-</body>
+                    <strong>Піші маршрути Карпатами, або трекінг по українськи</strong>
+                    <br>Для того аби долучитися до особливого стану єднання з природою, найкраще обирати для відпочинку піші маршрути Карпатами. А мандрувати по горах з нашою компанією – правильний та розумний вибір.
+                </p>
+            </article>
+            <aside>
+                <a href="https://www.karpaty.info/ua/info/useful/telephone/">
+                    <h4>Контактні телефони Гірських пошуково-рятувальних підрозділів</h4>
+                    <img src="images/save.jpg" alt="контакти_рятувальників">
+                </a>
+                <a href="https://www.robinzon-ua.com.ua/ukr/prokat-turistichnogo-sporjadzhennja/">
+                    <h4>Прокат туристичного спорядження</h4>
+                    <img src="images/прокат.jpg" alt="прокат">
+                </a>
+                <a href="https://calendar.karpaty.ua/uk/events/kazkovyj-marmaros">
+                    <h4>Найближча подія</h4>
+                    <img src="images/гід.png" alt="події">
+                </a>
+            </aside>
+        </main>
+        <footer>
+            <article>
+                <h4>Контактна інформація</h4>
+            </article>
+            <section>
+                <!-- <img src="images/mail.png" alt="електронна пошта"> -->
+                <p>&#x2709;oksankak16@gmail.com</p>
+                <!-- <img src="images/mobile.png" alt="контактний номер"> -->
+                <p>&#x2706;0937606382</p>
+                <p>0671030220</p>
+            </section>
+            <h4>Напишіть нам:</h4>
+            <form action="https://formspree.io/oksankak16@gmail.com" method="POST">
+                <label>
+                    <input type="text" placeholder="Ваше ім'я" name="your_name">
+                </label>
+                <br>
+                <br>
+                <label>
+                    <input type="email" placeholder="Електронна адреса" name="your_address">
+                </label>
+                <br>
+                <br>
+                <label>
+                    <textarea name="your comments" cols="30" rows="5" placeholder="Ваше повідомлення"></textarea>
+                </label>
+                <label>
+                    <br>
+                    <br>
+                    <input type="submit" value="Відправити">
+                </label>
+            </form>
+        </footer>
+        <article>
+            <hr>
+            <figure>
+                <a href="https://www.facebook.com/profile.php?id=100002282821034">
+                    <img src="images/facebook.png" alt="facebook">
+                </a>
+                <a href="https://www.instagram.com/k_o_s_y_i_v_n_a/?hl=uk">
+                    <img src="images/instagram.png" alt="instagram">
+                </a>
+                <a href="https://twitter.com/?lang=uk">
+                    <img src="images/twitter.png" alt="twitter">
+                </a>
+                <a href="https://web.telegram.org/#/login">
+                    <img src="images/telegram.png" alt="telegram">
+                </a>
+            </figure>
+        </article>
+    </body>
 </html>
