--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Travel</title>
         <link rel="stylesheet" href="css/index.css">
+        <link rel="shortcut icon" type="image/png" href="images/logo.png"/>
     </head>
     <body>
         <header>
