--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="uk">
     <head>
         <meta charset="UTF-8">
@@ -10,24 +9,30 @@
     </head>
     <body>
         <header>
-        <nav>
-            <div class="logo">
-            <h1>
-            <img src="images/logo.png" alt="Логотип" height="55" width="66">
-                Мандруй</h1>
-            <h2>Туристичний путівник Карпатами</h2>
-            </div>
-            <ul class="menu">
-            <li> <a href="index.html">Головна</a></li>
-            <li> <a href="hiking_trails.html">Туристичні маршрути</a></li>
-            <li> <a href="blog.html">Блог</a> </li>
-            <!-- <li><input type="search" placeholder="Пошук">
+            <nav>
+                <div class="logo">
+                    <h1>
+                        <img src="images/logo.png" alt="Логотип" height="55" width="66">Мандруй
+                    </h1>
+                    <h2>Туристичний путівник Карпатами</h2>
+                </div>
+                <ul class="menu">
+                    <li>
+                        <a href="index.html">Головна</a>
+                    </li>
+                    <li>
+                        <a href="hiking_trails.html">Туристичні маршрути</a>
+                    </li>
+                    <li>
+                        <a href="blog.html">Блог</a>
+                    </li>
+                    <!-- <li><input type="search" placeholder="Пошук">
             <button>Пошук</button></li> -->
-            </ul>
-        </nav>
-         <div class="slider">
-         <!-- <img src="images/mountain_change.jpeg" alt="Гора" width="980" height="526" class="slider"> -->
-         <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
+                </ul>
+            </nav>
+            <div class="slider">
+            <!-- <img src="images/mountain_change.jpeg" alt="Гора" width="980" height="526" class="slider"> -->
+            <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
          <img src="images/img3.jpeg" alt="mountains3" width="980" height="526">
          <img src="images/img4.jpeg" alt="mountains4" width="980" height="526">
          <img src="images/img5.jpeg" alt="mountains5" width="980" height="526">
