--- a/blog.html
+++ b/blog.html
@@ -5,30 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Travel</title>
-        <link rel="stylesheet" href="style.css">
+         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <header>
-            <img src="images/logo2.png" alt="Логотип">
-            <h1>Мандруй</h1>
-            <h2>Туристичний путівник Карпатами</h2>
-        </header>
         <nav>
-            <a href="index.html">Головна</a>
-            <a href="hiking_trails.html">Туристичні маршрути</a>
-            <a href="blog.html">Блог</a>
-            <input type="search" placeholder="Пошук">
-            <button>Пошук</button>
+            <div class="logo">
+            <h1>
+            <img src="images/logo.png" alt="Логотип" height="55" width="66">
+                Мандруй</h1>
+            <h2>Туристичний путівник Карпатами</h2>
+            </div>
+            <ul class="menu">
+            <li> <a href="index.html">Головна</a></li>
+            <li> <a href="hiking_trails.html">Туристичні маршрути</a></li>
+            <li> <a href="blog.html">Блог</a> </li>
+            <!-- <li><input type="search" placeholder="Пошук">
+            <button>Пошук</button></li> -->
+            </ul>
         </nav>
-        <main>
-            <article>
-                <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
-                <!-- <img src="images/img1.jpeg" alt="mountains1" width="980" height="526">
+         <div class="slider">
+         <!-- <img src="images/mountain_change.jpeg" alt="Гора" width="980" height="526" class="slider"> -->
+         <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
          <img src="images/img3.jpeg" alt="mountains3" width="980" height="526">
          <img src="images/img4.jpeg" alt="mountains4" width="980" height="526">
          <img src="images/img5.jpeg" alt="mountains5" width="980" height="526">
          <img src="images/img6.jpeg" alt="mountains6" width="980" height="526"> -->
-            </article>
+            </div>
             <article>
                 <section>
                     <h3>Фототури Карпатами: маршрути для самостійних подорожей та поради членам фотогруп</h3>
