--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <img src="images/img6.jpeg" alt="mountains6" width="980" height="526"> -->
             </div>
         </header>
-        <!-- <main>
+        <main>
             <article>
                 <section>
                     <h3>Про нас</h3>
@@ -81,9 +81,7 @@
                 <h4>Контактна інформація</h4>
             </article>
             <section>
-               >
                 <p>&#x2709;oksankak16@gmail.com</p>
-
                 <p>&#x2706;0937606382</p>
                 <p>0671030220</p>
             </section>
@@ -127,4 +125,4 @@
             </figure>
         </article>
     </body>
-</html> -->
+</html>
