--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
             </aside>
         </main>
         <footer>
-            <article>
-                <h4>Контактна інформація</h4>
-            </article>
             <section>
+                <h4>Контактна інформація</h4>
                 <p>&#x2709;oksankak16@gmail.com</p>
                 <p>&#x2706;0937606382</p>
                 <p>0671030220</p>
             </section>
+            <section>
             <h4>Напишіть нам:</h4>
             <form action="https://formspree.io/oksankak16@gmail.com" method="POST">
                 <label>
@@ -106,6 +105,7 @@
                     <input type="submit" value="Відправити">
                 </label>
             </form>
+            </section>
         </footer>
         <article>
             <hr>
