--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 </ul>
             </nav>
             <div class="slider">
+                <div class="slider-item showing"></div>
+                <div class="slider-item"></div>
+                <div class="slider-item"></div>
             <!-- <img src="images/mountain_change.jpeg" alt="Гора" width="980" height="526" class="slider"> -->
             <!-- <img src="images/img2.jpeg" alt="mountains2" width="980" height="526">
          <img src="images/img3.jpeg" alt="mountains3" width="980" height="526">
@@ -124,5 +127,6 @@
                 </a>
             </figure>
         </article>
+        <script src="js/index.js"></script>
     </body>
 </html>
